themes/mm/sass/main.scss
//------------------------------
// Imports
//------------------------------

@import "variables";
@import "fonts";
@import "bootstrap4/bootstrap-flex";

//------------------------------
// Global Theme
//------------------------------

html {
  @include media-breakpoint-down(xs) {
    font-size: round($font-size-root / 1.12);
  }
}

body {
  font-weight: 300;
}

.nav {
  display: flex;
  margin-top: $spacer;
  margin-bottom: $spacer * 2.2;
  align-items: baseline;
  flex-wrap: wrap;

  .brand {
    margin-right: $spacer;
    font-size: 30px;
    color: $gray-dark;

    @include media-breakpoint-down(xs) {
      width: 100%;
      padding: 0;
      margin: 0 0 .7rem;
      text-align: center;
    }
  }

  .nav-link.about {
    margin-left: auto;
  }
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  margin-top: $spacer * 1.5;

  + blockquote {
    // Extra whitespace to quotes directly after headings
    margin-top: $spacer;
  }

  @include media-breakpoint-down(xs) {
    // Less whitespace on small screens
    line-height: 1.1;
  }
}

h1 {
  @include media-breakpoint-down(xs) {
    font-size: 2rem;
  }
}

h2 {
  @include media-breakpoint-down(xs) {
    font-size: 1.85rem;
  }
}

li {
  // Add more space between list items
  margin-bottom: $spacer / 2;
}

// Larger clickable area
// README: Reduce size if you experience problems with overlapping links
// ↳ For debugging enable CSS Outlining at http://localhost:3001/remote-debug
a {
  position: relative;
  padding: .6em 1em;
  margin: -.6em -1em;
}

// TODO: Decide if necessary; why arn't **bolder** fonts being rendered correctly?
b, strong {
  font-weight: bold;
}

blockquote {
  @extend .blockquote;
  border-left-color: $gray-light;

  > p:last-of-type {
    @extend .m-b-0;
  }
}

table {
  @extend .table;
  @extend .table-responsive; // TODO: May be worth setting at a per table basis instead

  thead th {
    border-top: 0;
  }

  @include media-breakpoint-down(xs) {
    th,
    td {
      padding: $table-sm-cell-padding;
    }
  }
}

abbr[title] {
  text-decoration: none;
  border-bottom: 2px dotted $gray-light;
}

kbd {
  white-space: nowrap;
}

.footer {
  margin: 2rem 0 3rem;
  color: $gray-light;
  text-align: center;

  > a {
    color: inherit;
    text-decoration: none;
  }
}

@include media-breakpoint-down(xs) {
  .lead,
  blockquote {
    font-size: 1rem;
  }
}

@include media-breakpoint-up(lg) {
  h1 {
    // More whitespace on large screens
    margin: .9rem 0 2.3rem;
  }
}

//------------------------------
// Category listing
//------------------------------

.category {
  > h1 {
    @include media-breakpoint-down(xs) {
      margin-top: 0;
    }
  }
}

//------------------------------
// Blog posts
//------------------------------

.page,
.post {
  margin-right: auto;
  margin-left: auto;

  > h1 {
    text-align: center;

    @include media-breakpoint-down(xs) {
      margin-top: 0;
    }
  }

  img {
    @extend .img-fluid;
  }
}

.meta {
  margin-top: $spacer * 1.3;
}

.author {
  white-space: pre-line;
}

.img-author {
  margin-bottom: $spacer / 2;
}

.tag {
  margin: 0;
}

.lead.bg-primary {
  padding: $spacer;
}

.footnote-ref {
  margin-left: .2rem;
}

//------------------------------
// Homepage
//------------------------------

.home-intro {
  text-align: center;
}

.subscribe {
  padding: ($spacer-y * 2) 0 ($spacer-y * 2.4);
  margin-top: $spacer * 3;
  margin-bottom: $spacer;
  text-align: center;
  border-top: 1px solid $gray-light;
  border-bottom: 1px solid $gray-light;
}

.summaries > article > p:last-of-type::after {
  content: "…";
}

.more {
  margin-top: $spacer;
}

.all-posts {
  padding-top: $spacer;
  margin-top: $spacer;
  border-top: 1px solid $gray-light;
}

